# Proyecto-Codigo-Limpio

./: 404.html  app.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  streamlit_app.py
.github/workflows/: test.yml
Guia_usuario/comandos/: index.html
Guia_usuario/persistencia/: index.html
api/: index.html
arquitectura/: index.html
data/: database_productos.json  database_usuarios.json
docs/: api.md  arquitectura.md  index.md  inicializa_el_proyecto.md
docs/Guia_usuario/: comandos.md  persistencia.md
docs/referencia_tecnica/: api.md  comandos.md
inicializa_el_proyecto/: index.html
referencia_tecnica/api/: index.html
referencia_tecnica/comandos/: index.html
search/: search_index.json
src/Esquemas/: carrito.py  item_carrito.py  producto.py  rol.py  usuario.py
src/almacenamiento/: base.py  carrito_repository.py  producto_repository.py  usuario_repository.py
src/api/: dependencias.py  main.py
src/api/routers/: carritos_router.py  productos_router.py  usuarios_router.py
src/app/: api_client.py
src/app/paginas/: carritos_page.py  productos_page.py  usuarios_page.py
src/core/: config.py  excepciones.py
src/gerencia_app/: alamcenamiento.py  almacenamiento.py  exepciones.py  modelos.py  servicios.py
src/gerencia_app/almacenamiento/: almacenamiento_supabase.py
src/gerencia_app/modelos/: Usuario.py  carrito.py  item_carrito.py  producto.py  rol.py  usuario.py
src/services/: carrito_service.py  producto_service.py  usuario_service.py
tests/: test_servicios.py
