[project]
name = "proyecto-cod-limpio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.2",
    "radon>=6.0.1",
    "rich>=14.3.3",
    "ruff>=0.15.4",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.4",
    "mkdocstrings[python]>=1.0.3",
]
