[project]
name = "proyecto-cod-limpio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "radon>=6.0.1",
    "rich>=14.3.3",
    "ruff>=0.15.4",
    "streamlit>=1.55.0",
    "supabase>=2.25.1",
    "typer>=0.24.1",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.4",
    "mkdocstrings[python]>=1.0.3",
]
